--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "13.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "ts-node": "^10.9.1",
