--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock": "^29.7.0",
+    "next-router-mock": "^0.9.10",
     "postcss": "^8",
     "tailwindcss": "^3",
     "ts-node": "^10.9.1",
